@@ -1,3 +1,5 @@
+import org.jetbrains.changelog.markdownToHTML
+
 fun properties(key: String) = providers.gradleProperty(key)
 fun environment(key: String) = providers.environmentVariable(key)
 fun prop(name: String): String {
@@ -7,9 +9,9 @@ fun prop(name: String): String {
 plugins {
     id("java")
     id("org.jetbrains.kotlin.jvm") version "2.1.0"
-    id("org.jetbrains.intellij.platform") version "2.5.0"
-    id("dev.clojurephant.clojure") version "0.8.0"
+    id("org.jetbrains.intellij") version "1.17.4"
     id("org.jetbrains.changelog") version "1.3.1"
+    id("dev.clojurephant.clojure") version "0.8.0"
 }
 
 group = prop("pluginGroup")
@@ -18,9 +20,6 @@ version = prop("pluginVersion")
 repositories {
     mavenLocal()
     mavenCentral()
-    intellijPlatform {
-        defaultRepositories()
-    }
     maven {
         name = "Clojars"
         url = uri("https://repo.clojars.org")
@@ -32,27 +31,27 @@ dependencies {
     implementation ("com.github.ericdallo:clj4intellij:0.8.0")
     implementation ("com.rpl:proxy-plus:0.0.9")
     implementation ("nrepl:nrepl:1.3.1")
-    intellijPlatform {
-        val type = providers.gradleProperty("platformType")
-        val ver  = providers.gradleProperty("platformVersion")
-        create(type, ver)
-        testFramework(org.jetbrains.intellij.platform.gradle.TestFrameworkType.Platform)
+}
+
+sourceSets {
+    main {
+        java.srcDirs("src/main", "src/gen")
+        if (project.gradle.startParameter.taskNames.contains("buildPlugin") ||
+            project.gradle.startParameter.taskNames.contains("clojureRepl") ||
+            project.gradle.startParameter.taskNames.contains("runIde")) {
+            resources.srcDirs("src/main/dev-resources")
+        }
+    }
+    test {
+        java.srcDirs("tests")
     }
 }
 
-intellijPlatform {
-    pluginConfiguration {
-        ideaVersion {
-            sinceBuild = prop("pluginSinceBuild")
-        }
-
-        // Get the latest available change notes from the changelog file
-        changeNotes.set(provider {
-            changelog.run {
-                getOrNull(prop("pluginVersion")) ?: getLatest()
-            }.toHTML()
-        })
-    }
+intellij {
+    pluginName.set(properties("pluginName"))
+    version.set(prop("platformVersion"))
+    type.set(properties("platformType"))
+    updateSinceUntilBuild.set(false)
 }
 
 changelog {
@@ -61,8 +60,8 @@ changelog {
 }
 
 java {
-    targetCompatibility = JavaVersion.VERSION_21
-    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_17
 }
 
 tasks.register("classpath") {
@@ -71,12 +70,10 @@ tasks.register("classpath") {
     }
 }
 
-
-
 tasks {
     compileKotlin {
         kotlinOptions {
-            jvmTarget = "21"
+            jvmTarget = "17"
             apiVersion = "1.9"
             languageVersion = "1.9"
             freeCompilerArgs = listOf("-Xjvm-default=all")
@@ -86,10 +83,54 @@ tasks {
     wrapper {
         gradleVersion = prop("gradleVersion")
     }
+
+    patchPluginXml {
+        sinceBuild.set(properties("pluginSinceBuild"))
+
+        // Extract the <!-- Plugin description --> section from README.md and provide for the plugin's manifest
+        pluginDescription.set(
+            projectDir.resolve("README.md").readText().lines().run {
+                val start = "<!-- Plugin description -->"
+                val end = "<!-- Plugin description end -->"
+
+                if (!containsAll(listOf(start, end))) {
+                    throw GradleException("Plugin description section not found in README.md:\n$start ... $end")
+                }
+                subList(indexOf(start) + 1, indexOf(end))
+            }.joinToString("\n").run { markdownToHTML(this) }
+        )
+
+        // Get the latest available change notes from the changelog file
+        changeNotes.set(provider {
+            changelog.run {
+                getOrNull(prop("pluginVersion")) ?: getLatest()
+            }.toHTML()
+        })
+    }
+
+    clojureRepl {
+        dependsOn("compileClojure")
+        classpath.from(sourceSets.main.get().runtimeClasspath
+                       + file("build/classes/kotlin/main")
+                       + file("build/clojure/main")
+        )
+        // doFirst {
+        //     println(classpath.asPath)
+        // }
+        forkOptions.jvmArgs = listOf("--add-opens=java.desktop/java.awt=ALL-UNNAMED",
+                                     "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
+                                     "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
+                                     "--add-opens=java.desktop/sun.font=ALL-UNNAMED",
+                                     "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                                     "-Djava.system.class.loader=com.intellij.util.lang.PathClassLoader",
+                                     "-Didea.mimic.jar.url.connection=true",
+                                     "-Didea.force.use.core.classloader=true"
+        )
+    }
 }
 
 clojure.builds.named("main") {
-    classpath.from(sourceSets.main.get().runtimeClasspath.asPath)
+    classpath.from(sourceSets.main.get().runtimeClasspath.asPath + "build/classes/kotlin/main")
     checkAll()
     aotAll()
     reflection.set("fail")
